--- a/NuGet/BasicFodyAddin.nuspec
+++ b/NuGet/BasicFodyAddin.nuspec
@@ -1,17 +1,17 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>SampleFodyAddin.Fody</id>
+    <id>BasicFodyAddin.Fody</id>
     <version>$version$</version>
-    <title>SampleFodyAddin.Fody</title>
+    <title>BasicFodyAddin.Fody</title>
     <authors>Simon Cropp</authors>
     <owners>Simon Cropp</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
-    <projectUrl>http://github.com/SimonCropp/SampleFodyAddin</projectUrl>
+    <projectUrl>http://github.com/SimonCropp/BasicFodyAddin</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A sample Fody add-in.</description>
     <summary />
     <language>en-AU</language>
-    <tags>Sample, ILWeaving, Fody, Cecil</tags>
+    <tags>ILWeaving, Fody, Cecil</tags>
   </metadata>
 </package>
