--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -68,9 +68,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Fody\Fody.csproj">
+    <ProjectReference Include="..\BasicFodyAddin\BasicFodyAddin.csproj">
       <Project>{C3578A7B-09A6-4444-9383-0DEAFA4958BD}</Project>
-      <Name>Fody</Name>
+      <Name>BasicFodyAddin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <Project>{E97E649F-B703-47E3-B18A-0871D3498742}</Project>
+      <Name>AssemblyToProcess</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
