--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@
 ##  If you have NuGet Package Restore enabled, uncomment this
 packages/
 ForSample/
+NugetBuild/
 
 # Visual Studio profiler
 *.psess
