--- a/NuGet/BasicFodyAddin.nuspec
+++ b/NuGet/BasicFodyAddin.nuspec
@@ -7,7 +7,7 @@
     <authors>Simon Cropp</authors>
     <owners>Simon Cropp</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
-    <projectUrl>http://github.com/SimonCropp/BasicFodyAddin</projectUrl>
+    <projectUrl>http://github.com/Fody/BasicFodyAddin</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A sample Fody add-in.</description>
     <summary />
