--- a/NuGet/BasicFodyAddin.nuspec
+++ b/NuGet/BasicFodyAddin.nuspec
@@ -9,6 +9,7 @@
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
     <projectUrl>http://github.com/Fody/BasicFodyAddin</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <iconUrl>https://raw.github.com/Fody/BasicFodyAddin/master/Icons/package_icon.png</iconUrl>
     <description>A sample Fody add-in.</description>
     <summary />
     <language>en-AU</language>
