--- a/NuGet/ProtectMe.nuspec
+++ b/NuGet/ProtectMe.nuspec
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata minClientVersion="2.8">
-    <id>BasicFodyAddin.Fody</id>
+    <id>ProtectMe.Fody</id>
     <version>$version$</version>
-    <title>BasicFodyAddin.Fody</title>
+    <title>ProtectMe.Fody</title>
     <authors>Simon Cropp</authors>
     <owners>Simon Cropp</owners>
     <developmentDependency>true</developmentDependency>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
-    <projectUrl>http://github.com/Fody/BasicFodyAddin</projectUrl>
+    <projectUrl>http://github.com/Fody/ProtectMe</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <iconUrl>https://raw.github.com/Fody/BasicFodyAddin/master/Icons/package_icon.png</iconUrl>
+    <iconUrl>https://raw.github.com/Fody/ProtectMe/master/Icons/package_icon.png</iconUrl>
     <description>A sample Fody add-in.</description>
     <summary />
     <language>en-AU</language>
