--- a/NuGet/ProtectMe.nuspec
+++ b/NuGet/ProtectMe.nuspec
@@ -4,16 +4,16 @@
     <id>ProtectMe.Fody</id>
     <version>$version$</version>
     <title>ProtectMe.Fody</title>
-    <authors>Simon Cropp</authors>
-    <owners>Simon Cropp</owners>
+    <authors>Andrea Canciani</authors>
+    <owners>Andrea Canciani</owners>
     <developmentDependency>true</developmentDependency>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
-    <projectUrl>http://github.com/Fody/ProtectMe</projectUrl>
+    <projectUrl>http://github.com/ranma42/ProtectMe</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <iconUrl>https://raw.github.com/Fody/ProtectMe/master/Icons/package_icon.png</iconUrl>
-    <description>A sample Fody add-in.</description>
+    <iconUrl>https://raw.github.com/ranma42/ProtectMe/master/Icons/package_icon.png</iconUrl>
+    <description>A Fody add-in to make members protected.</description>
     <summary />
-    <language>en-AU</language>
+    <language>en-US</language>
     <tags>ILWeaving, Fody, Cecil</tags>
     <dependencies>
       <dependency id="Fody"/>
